########################
# Current Developments #
########################

Work toward next release.  Currently under development.

ADDED:

* Added questions' types to the "question_info" cache.

CHANGED:

DEPRECATED:

REMOVED:

FIXED:

* The checker script is now aware of the cs_now variable.

* Fixed an issue that caused a misleading error message when the remote Python
  sandbox couldn't be reached.

* Fixed a misleading error message about how to install jose when using the
  "openid_connect" authentication type.

* Fixed a broken link after an error message when using the "openid_connect"
  authentication type.

SECURITY:

* Prevented "as_role"  from affecting the 'role' field in cs_user_info if the
  user does not have the "impersonate" permission.

DOCUMENTATION:


##################
# Version 12.0.0 #
##################

ADDED:

* Added a cache of question information, to avoid having to fake a page load
  to get question information in tutor.compute_page_stats.

CHANGED:

* CAT-SOOP can optionally be configured to use uWSGI, and the options for
  configuring the WSGI server have changed.

* Logs are now stored in plain-text files, as opposed to binary log file.

* Page views are no longer logged in the problemactions log.

* Updated KaTeX to 0.9.0-beta1.

* "question_points" is no longer a valid key in tutor.compute_page_stats.
  "question_info" should be used instead.

FIXED:

* Fixed a bug with rendering of scores when manual grades are submitted.


##################
# Version 11.1.2 #
##################

ADDED:

* Added "Log In" / "Log Out" to top menu by default, and gave authentication
  types the ability to populate that menu.

CHANGED:

* Separated WSGI server into separate process, and allow cs_wsgi_server_port to
  be a list to start multiple servers (for load balancing).

* Updated wsgi.py so that it can be used by an external WSGI server (such as
  uWSGI).

* csq_nosubmit_message is now sent only on an actual submission (not when